--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.5",
     "ajv": "^8.17.1",
+    "allure-js-commons": "^3.0.8",
+    "allure-playwright": "^3.0.8",
     "playwright": "^1.49.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
